--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV = development
 PORT = 5050
+MONGO_URI = mongodb+srv://marrnuel:Josephat12345.@manuel-restapi.qwfdkde.mongodb.net/?retryWrites=true&w=majority
