hashed passwords, set up jwt, protected goal routes and user data route

--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
 NODE_ENV = development
 PORT = 5050
-<<<<<<< HEAD
 MONGO_URI = mongodb+srv://marrnuel:Josephat12345.@test.qwfdkde.mongodb.net/?retryWrites=true&w=majority
-=======
-MONGO_URI = mongodb+srv://marrnuel:Josephat12345.@manuel-restapi.qwfdkde.mongodb.net/?retryWrites=true&w=majority
 
-JWT_SECRET = abc123
->>>>>>> 421c4c3a888772ec8d0216c5a71cb46d0f88add7
+
+JWT_SECRET = 12345
