--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "server": "nodemon  server.js",
+    "client": "npm run dev --prefix frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Onyewuchi Emeka",
